--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 bot:
-  token: 1994356444:AAEEH18cW-sL6O9s6h5mDaUAhE4gVff5g_E
-  name: omg_commerce_omg_bot
+  token:
+  name:
 server.port: 8087
 
 spring:
