--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,13 @@
 bot:
   token:
   name:
+  welcome: "Привет! Ты пишешь боту, который поможет освежить основные теоретические вопросы по java-core! 
+  \n 1. Жми: \"Получить вопрос\"
+  \n 2. Попробуй ответить 
+  \n 3. Проверь себя!"
 server.port: 8087
+
+
 
 spring:
   datasource:
