--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,12 +7,11 @@ bot:
   \n 3. Проверь себя!"
 server.port: 8087
 
-
-
 spring:
   datasource:
     hikari:
       schema: public
+#    example url: jdbc:postgresql://localhost:5432/postgres
     url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: 123
+    username:
+    password:
