Added answer when DB not exist

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 bot:
   token:
   name:
-  welcome: "Привет! Ты пишешь боту, который поможет освежить основные теоретические вопросы по java-core! 
+  welcome: ", Привет! Ты пишешь боту, который поможет освежить основные теоретические вопросы по java-core! 
   \n 1. Жми: \"Получить вопрос\"
   \n 2. Попробуй ответить 
   \n 3. Проверь себя!"
