Added checking for already users and added new welcome variant

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,11 @@
 bot:
   token:
   name:
-  welcome: ", Привет! Ты пишешь боту, который поможет освежить основные теоретические вопросы по java-core! 
+  welcome_for_new_users: ", Привет! Ты пишешь боту, который поможет освежить основные теоретические вопросы по java-core! 
+  \n 1. Жми: \"Получить вопрос\"
+  \n 2. Попробуй ответить 
+  \n 3. Проверь себя!"
+  welcome_for_already_users: ", с возвращением! Из последних новостей: у нас появился раздел Kubernetes! 
   \n 1. Жми: \"Получить вопрос\"
   \n 2. Попробуй ответить 
   \n 3. Проверь себя!"
